# llmforecast

./: .env.example  .gitignore  LICENSE  README.md  calibration.py  forecaster.py  main.py  polymarket.py  pyproject.toml  run_eval.py  score_champs.py  train_markets.py  train_worldcup.py
eval/: champs_eval.json
