[project]
name = "llmforecast"
version = "0.1.0"
description = "Bayesian Linguistic Forecaster: an LLM (Gemini/DeepSeek) + Brave Search agent that estimates event probabilities via web-grounded Bayesian updates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
]
